--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,24 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+ksp.jvmTarget=17
+
+# Gradle ???
+org.gradle.parallel=true
+org.gradle.caching=true
+org.gradle.configureondemand=true
+
+# Kotlin ???? ???
+kotlin.compiler.execution.strategy=in-process
+kotlin.incremental=true
+kotlin.incremental.useClasspathSnapshot=true
+
+# KSP ??
+ksp.incremental=true
+ksp.incremental.intermodule=true
+
+# Android ???
+android.enableJetifier=true
+
+# todo URL ?? ??
+BASE_URL=https://
